feat: improve openapi
